--- a/client/src/components/AddParkomat/addParkomat.css
+++ b/client/src/components/AddParkomat/addParkomat.css
@@ -17,6 +17,7 @@ font-size: 12px;
 font-style: normal;
 font-weight: 500;
 line-height: 140%;
+margin-top: 10px;
 }
 
 .file-input {
@@ -53,6 +54,7 @@ line-height: 140%;
   justify-content: center;
   padding-top: 80px;
   align-items: start;
+  min-height: 700px;
 }
 .add-parkomat form {
   /* padding: 70px 0; */
@@ -139,8 +141,15 @@ select {
 }
 select {
   padding-right: 30px;
+margin-bottom: 5px;
 }
-
+.secret-key-input {
+  border-radius: 22px;
+  border: 1px solid #e8e8e8;
+  height: 32px;
+  padding-left: 10px;
+  margin-top: 5px;
+}
 /* .add-parkomat__name-input, .add-parkoma__location-section input, select {
   height: 44px;
 } */
@@ -184,3 +193,18 @@ textarea {
   color: white;
   cursor: pointer;
 }
+
+.inputs-container {
+  display: flex;
+  justify-content: space-between;
+}
+.inputs-container input {
+
+  border-radius: 22px;
+  border: 1px solid #e8e8e8;
+  height: 32px;
+  padding-left: 10px;
+  margin-right: 15px;
+  margin-top: 5px;
+}
+
